correction d'un bug de Bitv

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 
+ o replicated a bug fix of Bitv (could not affect Matrix, though)
  o fixed DFS traversal in Traverse.Dfs.{prefix,prefix_component,iterator}
 
 version 0.99b, December 18th, 2007
