--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 
+version 0.99c, April 3rd, 2008
+------------------------------
  o replicated a bug fix of Bitv (could not affect Matrix, though)
  o fixed DFS traversal in Traverse.Dfs.{prefix,prefix_component,iterator}
 
