LPGL 2.1; amelioration de shortest_path

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 
+ o license: LGPL updated to version 2.1
+ o Path: improved efficiency of shortest_path
  o Makefile: patch to the build system for a DESTDIR (patch of Igor Galic)
  o Dot: fixed bug in the parsing of attributes
 
