--- a/CHANGES
+++ b/CHANGES
@@ -1,16 +1,20 @@
+ o license: LGPL updated to version 2.1
  o ocamlgraph now requires ocaml 3.10 or higher
+ o Makefile: 
+     - fixed bug when lablgnomecanvas is not installed
+     - fixed bug when ocamlfind is installed
+     - patch to the build system for a DESTDIR (patch by Igor Galic)
+     - "make -j" compliant
  o New function Blocks.after_unserialization in order to be able to safely
    serialize abstract vertices (see the FAQ)
- o Topological: folding is now tail-recursive (patch by Michael Furr)
- o license: LGPL updated to version 2.1
- o Path: improved efficiency of shortest_path
- o Makefile: patch to the build system for a DESTDIR (patch by Igor Galic)
- o Dot: fixed bug in the parsing of attributes
- o Dot: fixed bug in the parsing of subgraphs (patch by Anne Pacalet)
- o fixed bug in Makefile when ocamlfind is installed
- o Topological: fixed bug in Make.{iter,fold}
+ o Dot: 
+     - fixed bug in the parsing of attributes
+     - fixed bug in the parsing of subgraphs (patch by Anne Pacalet)
  o Oper: fixed bug in intersect
  o Path: improved efficiency of Dijkstra
+ o Topological: 
+     - fixed bug in Make.{iter,fold}
+     - folding is now tail-recursive (patch by Michael Furr)
 
 version 0.99c, April 3rd, 2008
 ------------------------------
