patch make install-findlib

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
  o configure: look for lablgnomecanvas.cmxa when compiling in native code
+ o Makefile: fixed make install-findlib when lablgtk and/or
+   lablgnomecanvas not installed
 
 version 1.0, October 14th, 2008
 ------------------------------
