--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 
+ o experimental: new GTK-based graph viewer called dgraph 
+   (viewGraph is now deprecated)
  o added Delaunay.iter_triangles (not of use in Ocamlgraph, actually)
 
 version 1.1, June 23rd, 2009
