--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 
- o Oper: fixed bug in mirror (isolated vertices were lost)
+version 1.3, Octobre 2nd, 2009
+------------------------------
+ o Oper.mirror: undirected graphs are not copied anymore
+ o Oper.mirror: fixed bug (isolated vertices were lost)
  o Graphviz: new signature GraphWithDotAttrs
  o Improvements of Dgraph
  o Configure: better test for detecting lablgtk
