--- a/CHANGES
+++ b/CHANGES
@@ -2,8 +2,9 @@
  o new implementation Imperative.Digraph.ConcreteBidirectionalLabeled
    (contribution of Jaap Boender)
  o Dgraph displays graphs faster
- o slight change of the types of Dgraph.DGraphModel.read_dot and
-   Dgraph.DGraphModel.read_xdot.
+ o several bugs fixed in DGraph
+ o several API changes in DGraph
+   (may break compatibility with existing development)
 
 version 1.3, Octobre 2nd, 2009
 ------------------------------
