--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 $Id: TODO,v 1.14 2004-10-22 14:42:06 signoles Exp $
 
+o has_cycle: return the cycle as a list of vertices
 o Better graph viewer and editor
 o Improve the website
 o It should be possible to specify the first vertex to visit in traversal 
