--- a/README
+++ b/README
@@ -69,3 +69,11 @@ You'll find examples of ocamlgraph use in demo.ml, demo_planar.ml and color.ml
 and "make color.opt" respectively).
 
 
+Bug reports
+-----------
+
+Bug reports can be sent to 
+
+  Sylvain Conchon <sylvain.conchon@lri.fr>
+  Jean-Christophe Filliatre <filliatr@lri.fr>
+  Julien Signoles <julien.signoles@cea.fr>
