[Makefile] do not put -for-pack twice [Persistent] new implementation for bidirectional graphs

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 
+ o new implementation Persistent.Digraph.ConcreteBidirectionalLabeled
+ o new implementation Persistent.Digraph.ConcreteBidirectional
  o Makefile: bug fixed when ocamlc (resp. ocamlopt) and ocamlc.opt
    (resp. ocamlopt.opt) are unconsistent
 
