fixed DOT parser (patch from Alex Reece)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 
+ o fixed DOT parser (contributed by Alex Reece)
  o Topological: fixed bug in presence of disjoint cycles; new implementation
  o new module [Graphml] to export graphs into the graphml format
   (contributed by Pietro Abate)
