fixed compilation issue with OCaml 3.12.1

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 
+ o fixed compilation issue with OCaml 3.12.1
+
 version 1.8.3, April 17, 2013
 ---------------------------
  o new module Merge implementing several different merges of vertices and
