--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 **************************************************************************
 *                                                                        *
-*  Ocamlgraph: a generic graph library for OCaml                         *
-*  Copyright (C) 2004-2010                                               *
+*  OCamlgraph: a generic graph library for OCaml                         *
+*  Copyright (C) 2004-2013                                               *
 *  Sylvain Conchon, Jean-Christophe Filliatre and Julien Signoles        *
 *                                                                        *
 *  This software is free software; you can redistribute it and/or        *
@@ -16,7 +16,7 @@
 **************************************************************************
 
 
-Ocamlgraph is a graph library for Ocaml. Its contribution is three-fold:
+OCamlgraph is a graph library for Ocaml. Its contribution is three-fold:
 
 1. It provides an easy-to-use graph implementation together with several
    operations and algorithms over graphs, in Graph.Pack.Digraph.
@@ -26,7 +26,7 @@ Ocamlgraph is a graph library for Ocaml. Its contribution is three-fold:
    Have a look at this module first in order to get an overview of what
    this library provides. See also `demo.ml'.
 
-2. Then ocamlgraph provides several other graph implementations for those
+2. Then OCamlgraph provides several other graph implementations for those
    not satisfied with the one above. Some are persistent (imutable) and other
    imperative (mutable). Some are directed and other are not.
    Some have labels for vertices, or labels for edges, or both. 
@@ -39,7 +39,7 @@ Ocamlgraph is a graph library for Ocaml. Its contribution is three-fold:
    vertices labels, edge labels, etc. and you get the data structure as a
    result.
 
-3. Finally, ocamlgraph provides several classic operations and algorithms
+3. Finally, OCamlgraph provides several classic operations and algorithms
    over graphs. They are also written as functors i.e. independently of the 
    data structure for graphs. One consequence is that you can define your own
    data structure for graphs and yet re-use all the algorithms from this 
@@ -47,10 +47,10 @@ Ocamlgraph is a graph library for Ocaml. Its contribution is three-fold:
    all vertices, over the successors of a vertex, etc.
 
 
-How to link with ocamlgraph
+How to link with OCamlgraph
 ---------------------------
 
-ocamlgraph is packaged as a single module `Graph'. Link is done as follows:
+OCamlgraph is packaged as a single module `Graph'. Link is done as follows:
 
 - bytecode
 
@@ -64,7 +64,7 @@ ocamlgraph is packaged as a single module `Graph'. Link is done as follows:
 Examples
 --------
 
-You'll find examples of ocamlgraph use in demo.ml, demo_planar.ml and color.ml 
+You'll find examples of OCamlgraph use in demo.ml, demo_planar.ml and color.ml 
 (you can compile these programs with "make demo.opt", "make demo_planar.opt"
 and "make color.opt" respectively).
 
