--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 
+ o also install graph.o
  o fixed installation with ocamlfind (thanks to Virgile Prevosto)
  o new functions [gnp] and [gnp_labeled] in module [Rand] to generate random
    graphs using the G(n,p) model (contributed by Thomas Aubry)
