--- a/README.adoc
+++ b/README.adoc
@@ -4,7 +4,7 @@ OCamlgraph is a graph library for Ocaml. Its contribution is three-fold:
 
 1. It provides an easy-to-use graph implementation together with several
    operations and algorithms over graphs, in Graph.Pack.Digraph.
-   It is a reasonably efficient imperative data structure for directed graphs 
+   It is a reasonably efficient imperative data structure for directed graphs
    with vertices and edges labeled with integers.
 +
 Have a look at this module first in order to get an overview of what
@@ -13,20 +13,20 @@ this library provides. See also `demo.ml`.
 2. Then OCamlgraph provides several other graph implementations for those
    not satisfied with the one above. Some are persistent (imutable) and other
    imperative (mutable). Some are directed and other are not.
-   Some have labels for vertices, or labels for edges, or both. 
+   Some have labels for vertices, or labels for edges, or both.
    Some have abstract types for vertices. etc.
 +
-See interface Sig for the graph signatures and modules Persistent and 
+See interface Sig for the graph signatures and modules Persistent and
 Imperative for the implementations.
 +
-These implementations are written as functors: you give the types of 
+These implementations are written as functors: you give the types of
 vertices labels, edge labels, etc. and you get the data structure as a
 result.
 
 3. Finally, OCamlgraph provides several classic operations and algorithms
-   over graphs. They are also written as functors i.e. independently of the 
+   over graphs. They are also written as functors i.e. independently of the
    data structure for graphs. One consequence is that you can define your own
-   data structure for graphs and yet re-use all the algorithms from this 
+   data structure for graphs and yet re-use all the algorithms from this
    library -- you only need to provide a few operations such as iterating over
    all vertices, over the successors of a vertex, etc.
 
@@ -46,14 +46,16 @@ native code::
 
 == Examples
 
-You'll find examples of OCamlgraph use in demo.ml, demo_planar.ml and color.ml 
-(you can compile these programs with `make demo.opt`, `make demo_planar.opt`
-and `make color.opt` respectively).
+You'll find examples of OCamlgraph use in subdirectory examples/
+(demo.ml, demo_planar.ml, color.ml, etc.).  You can compile these
+programs with `make examples`. Corresponding binaries are produced in
+subdirectory bin/. You can also build them individually, e.g. `make
+bin/demo.opt` compiles examples/demo.ml.
 
 
 == Bug reports
 
-Bug reports can be sent to 
+Bug reports can be sent to
 
   Sylvain Conchon <sylvain.conchon@lri.fr>
   Jean-Christophe Filliatre <filliatr@lri.fr>
