fixed 'make install' to copy file 'META' as well

--- a/INSTALL.adoc
+++ b/INSTALL.adoc
@@ -3,7 +3,7 @@
 
 You need Objective Caml >= 3.10.2 to compile this library.
 
-Configure with 
+Configure with
 
         autoconf
 	./configure
@@ -15,6 +15,10 @@ Compile with
 Install (as root if needed) with
 
 	make install
+
+To install somewhere else, with a different path prefix, use instead
+
+        make DESTDIR=/another/place install
 
 findlib users may also do
 
